@@ -1,40 +1,52 @@
 <h4 class="ws-title">About</h4>
-<div class="p-0 banner-image-container center">
-    <div class="hover p-3">
-        <div class="profile-settings__profile-image-upload" mdbDropdown>
-            <label *ngIf="!isBannerImageUploading.isRunning()" class="btn-upload btn-upload-camera mr-2" mdbDropdownToggle>
-                <span class="fas fa-camera"></span></label>
-            <div class="dropdown-menu dropdown-primary p-0" style="top: 12px; left: -8px; overflow: hidden;">
-                <a href="javascript:void(0)" class="dropdown-item" (click)="isBannerUploaderOpened = true">Upload</a>
-                <a href="javascript:void(0)" (click)="removeBannerImage()" class="dropdown-item">Remove</a>
+<div class="row no-gutters center" style="width: fit-content">
+    <div class="col-lg-auto mb-3">
+        <div *ngIf="!isMobileSize" class="img-profile__container">
+            <img *ngIf="shop?.profileImage" class="img-profile__profile" [src]="profileImage" alt="profile-image" />
+            <img class="img-profile__profile-background my-1 center" src="assets/images/png/icon-with-profile-image-borderless.png" alt="profile-background" />
+            <p class="img-profile__name mb-0 text-break">{{ shop?.name }}</p>
+            <p class="img-profile__username mb-0">@{{ shop?.username }}</p>
+        </div>
+        <div *ngIf="isMobileSize" class="img-profile__mobile-container">
+            <img *ngIf="shop?.profileImage" class="img-profile__profile" [src]="profileImage" alt="profile-image" />
+            <div class="img-profile__name-container">
+                <p class="img-profile__name mb-0 text-break">{{ shop?.name }}</p>
+                <p class="img-profile__username mb-0">@{{ shop?.username }}</p>
             </div>
         </div>
-    </div>
-    <div style="background-color: rgba(0,0,0,.2); max-width: 465px; width: 100%; height: 60%; margin-bottom: 3rem">
-        <div>
-            <div class="img-profile__container">
-                <img class="img-profile" [src]="profileImage" alt="Shop Profile" />
-            </div>
-            <span class="img-profile-camera img-hover">
-                <div class="profile-settings__profile-image-upload" mdbDropdown>
-                    <span *ngIf="!isProfileImageUploading.isRunning()" class="camera nooutline" mdbDropdownToggle>
-                        <span class="fas fa-camera"></span>
-                    </span>
-                    <div class="dropdown-menu dropdown-primary p-0" style="top: 35px; left: 35px; overflow: hidden;">
-                        <a href="javascript:void(0)" class="dropdown-item" (click)="isProfileUploaderOpened = true">Upload</a>
-                        <a href="javascript:void(0)" (click)="removeProfileImage()" class="dropdown-item">Remove</a>
-                    </div>
-                </div>
-                <span *ngIf="isProfileImageUploading.isRunning()" class="img-profile__uploading">
-                    <img style="position: absolute; top: calc(50% - 8px); left: calc(50% - 8px);" [src]="environment.LOADING_UPLOAD_DATA" alt="loading" />
+        <span class="img-profile-camera img-hover">
+            <div class="img-profile__uploading" mdbDropdown>
+                <span *ngIf="!isProfileImageUploading.isRunning()" class="camera nooutline" mdbDropdownToggle>
+                    <span class="fas fa-camera"></span>
                 </span>
+                <div class="dropdown-menu dropdown-primary p-0">
+                    <a href="javascript:void(0)" class="dropdown-item" (click)="isProfileUploaderOpened = true">Upload</a>
+                    <a href="javascript:void(0)" (click)="removeProfileImage()" class="dropdown-item">Remove</a>
+                </div>
+            </div>
+            <span *ngIf="isProfileImageUploading.isRunning()" class="img-profile__uploading">
+                <img style="position: absolute; top: calc(50% - 8px); left: calc(50% - 8px);" [src]="environment.LOADING_UPLOAD_DATA" alt="loading" />
+            </span>
+        </span>
+    </div>
+    <div class="banner-image-container">
+        <div class="hover p-3">
+            <div class="profile-settings__profile-image-upload" mdbDropdown>
+                <label *ngIf="!isBannerImageUploading.isRunning()" class="btn-upload btn-upload-camera mr-2" mdbDropdownToggle>
+                    <span class="fas fa-camera"></span></label>
+                <div class="dropdown-menu dropdown-primary p-0" style="top: 15px; left: -8px; overflow: hidden;">
+                    <a href="javascript:void(0)" class="dropdown-item" (click)="isBannerUploaderOpened = true">Upload</a>
+                    <a href="javascript:void(0)" (click)="removeBannerImage()" class="dropdown-item">Remove</a>
+                </div>
+            </div>
+        </div>
+        <div class="w-100 h-100" style="background-color: rgba(0,0,0,.2);">
+            <div *ngIf="!bannerImage" style="height: 279px"></div>
+            <img *ngIf="bannerImage" class="banner-image" [src]="bannerImage" alt="Shop Banner" />
+            <span *ngIf="isBannerImageUploading.isRunning()" class="img-banner__uploading">
+                <img style="position: absolute; top: calc(50% - 8px); left: calc(50% - 8px);" [src]="environment.LOADING_UPLOAD_DATA" alt="loading" />
             </span>
         </div>
-        <div *ngIf="!bannerImage" style="height: 279px"></div>
-        <img *ngIf="bannerImage" class="banner-image" [src]="bannerImage" alt="Shop Banner" />
-        <span *ngIf="isBannerImageUploading.isRunning()" class="img-banner__uploading">
-            <img style="position: absolute; top: calc(50% - 8px); left: calc(50% - 8px);" [src]="environment.LOADING_UPLOAD_DATA" alt="loading" />
-        </span>
     </div>
 </div>
 <div class="py-2">
