@@ -1,43 +1,66 @@
 @import '../../../../../assets/scss/variables.scss';
 
-.img-profile__container{
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    bottom: -50px;
-    left: calc(5%);
-    border: 2px solid #ccc;
+.img-profile__container {
     transition: .3s ease;
-    background-color: #fff;
 
-    .img-profile {
-        height: 100%;
-        width: 100%;
+    .img-profile__name {
+        text-align: center;
+        font-weight: bold;
+    }
+
+    .img-profile__username {
+        text-align: center;
+        font-size: .9rem;
+    }
+
+    .img-profile__profile {
+        position: absolute;
+        top: 28px;
+        left: 49px;
+        width: 140px;
+        height: 140px;
         border-radius: 50%;
-        position: relative;
+        z-index: 1;
+    }
+
+    .img-profile__profile-background {
+        display: block;
+        width: 230px;
+        height: 230px;
     }
 }
-.img-profile-camera{
+
+.img-profile-camera {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    top: 28px;
+    left: 49px;
+    width: 140px;
+    height: 140px;
     position: absolute;
-    bottom: -50px;
-    left: calc(5%);
-    border: 2px solid #ccc;
     transition: .3s ease;
+    z-index: 2;
+
     .img-profile__uploading {
+        border-radius: 50%;
         position: absolute;
         top: 0;
         right: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(255, 255, 255, .5);
+        .dropdown-menu{
+            top: 65px;
+            left: 35px;
+            overflow: hidden;
+        }
     }
 
     .camera {
         display: none;
+        width: 138px;
+        line-height: 138px;
+        text-align: center;
+        color: #fff;
+        font-size: 1.4rem;
     }
 
     &:hover {
@@ -47,12 +70,6 @@
 
         .camera {
             display: block;
-            width: 94px;
-            line-height: 94px;
-            text-align: center;
-            color: #fff;
-            font-size: 1.4rem;
-            display: inline-block;
         }
 
         .fa-camera {
@@ -144,15 +161,15 @@
 
 .banner-image-container {
     position: relative;
-    max-width: 465px;
-    width: 100%;
-    height: 60%;
+    background-color: rgba(0, 0, 0, .2);
+    width: 831px;
+    height: 300px;
+    margin-bottom: 3rem;
 
     .img-banner__uploading {
         position: absolute;
         height: 100%;
         width: 100%;
-        background-color: rgba(255, 255, 255, .5);
         top: 0;
         left: 0;
     }
@@ -197,7 +214,6 @@
         object-position: center;
         width: 100%;
         height: 100%;
-        max-width: 500px;
     }
 }
 
@@ -248,5 +264,58 @@ ul.contributor-list {
 button {
     span.loading {
         animation: rotate 8s infinite;
+    }
+}
+
+@media(max-width: 992px) {
+    .banner-image-container {
+        width: 100vw;
+        height: calc(100vw * 0.361);
+        margin-bottom: 0;
+        margin-left: -1rem;
+        object-fit: cover;
+    }
+
+    .img-profile__mobile-container {
+        border-radius: 50%;
+        padding-left: 1rem;
+        padding-right: 1rem;
+
+        .img-profile__profile {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            box-shadow: 0 0 3px #ccc;
+        }
+
+        .img-profile__name-container {
+            display: inline-block;
+            height: 60px;
+            vertical-align: -webkit-baseline-middle;
+            padding-left: 1rem;
+            padding-right: 1rem;
+            .img-profile__name{
+                font-weight: bold;
+            }
+        }
+    }
+
+    .img-profile-camera {
+        width: 60px;
+        height: 60px;
+        top: 0;
+        left: 1rem;
+        .img-profile__uploading{
+            .dropdown-menu{
+                top: 34px;
+                left: 5px;
+            }
+        }
+
+        .camera {
+            width: 60px;
+            line-height: 60px;
+            position: relative;
+        }
     }
 }
