@@ -7,7 +7,7 @@
   </div>
   <ul *ngIf="user" class="ws-nav list-unstyled">
     <li>
-      <a href="javascript:void(0)" (click)="navigateToHome()">Shops</a>
+      <a href="javascript:void(0)" (click)="navigateToHome()">Pages</a>
     </li>
   </ul>
   <div class="user-container float-right d-inline-block">
